# strom

./: .gitattributes  .gitignore  01_strom_results.html  02_waermestrom_results.html  03_periods.html  04_climate_and_strom.html  05_model.html  06_crossvalidation.html  07_playground.html  08_h2o.html  99_playground.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README  README.md  connections.ini  index.html  output.html  playground.html  playground.ipynb  playground.rmd  playground_quarto.html  playground_quarto.qmd  pyproject.toml  search.json
.github/: dependabot.yml
.stepit_cache/: baseline  baseline_3978e0b9c931016b9a7e4868d2acb84f_06c58537567cb1e45a0effe70994e07c  baseline_3978e0b9c931016b9a7e4868d2acb84f_0e398e79828a9c1b5dbc59a364c716fc  baseline_3978e0b9c931016b9a7e4868d2acb84f_124d8ca80801e185b1ed8f7593a67363  baseline_3978e0b9c931016b9a7e4868d2acb84f_1fab08caf7d4658be5bb1c12ecc52ed3  baseline_3978e0b9c931016b9a7e4868d2acb84f_331723b360285bcdd893235cfee952b9  baseline_3978e0b9c931016b9a7e4868d2acb84f_3d47c40f99a13698cbe644dbcc9daefd  baseline_3978e0b9c931016b9a7e4868d2acb84f_4935e43bb03097716f864b41f3e95cfe  baseline_3978e0b9c931016b9a7e4868d2acb84f_59d594b43d347b58132258108ed31ee4  baseline_3978e0b9c931016b9a7e4868d2acb84f_6be7f75906439b72e498db2e8b40d38c  baseline_3978e0b9c931016b9a7e4868d2acb84f_88678dc35d49c351f97d89a2b2a678e7  baseline_3978e0b9c931016b9a7e4868d2acb84f_8eff332cc4c8d21378a377c4dbb83e79  baseline_3978e0b9c931016b9a7e4868d2acb84f_9db54fb20877dd4e3462f5949c823514  baseline_3978e0b9c931016b9a7e4868d2acb84f_9fae6c6f25a1789dc9f96408054b4962  baseline_3978e0b9c931016b9a7e4868d2acb84f_a4dd7b36f63ac5cb640b51093cdc3b1b  baseline_3978e0b9c931016b9a7e4868d2acb84f_aabb7be86c95a7dd290407d7c8fd5501  baseline_3978e0b9c931016b9a7e4868d2acb84f_b54ab217e7d3d4de9b8c73f70738254f  baseline_3978e0b9c931016b9a7e4868d2acb84f_b6e3ec1a0890a398c485ec7fa36485e1  baseline_3978e0b9c931016b9a7e4868d2acb84f_c0758865a8100500088f08220da740cc  baseline_3978e0b9c931016b9a7e4868d2acb84f_c5effe4e58c2025c80b9b94598320406  baseline_3978e0b9c931016b9a7e4868d2acb84f_cdb9231a1f4cbaf2adb08b1ab1a3907b  baseline_3978e0b9c931016b9a7e4868d2acb84f_cf01625b6b682b7d42605aa54c576f81  baseline_3978e0b9c931016b9a7e4868d2acb84f_e6b7eacb4940786fa4f50cf177f56e75  baseline_3978e0b9c931016b9a7e4868d2acb84f_e86663e04b8a7e119fa52655c604325e  baseline_427be5a67086e8559f7ab14629523a90  baseline_57ce06b398efbbf205f36787510a8a32  baseline_5a7285d06799751aa2132d725aac4aef  baseline_6a30070f10a6d46659873913bb3e8436  baseline_a88393c1454d281b7841aa5572c0b860  baseline_d02b3f5ad7f5c0a69747b46b689f6dae  compare_last_days  compare_last_days_103121badbf35431f32049e0f20fba41  compare_last_days_7b4259f52d1f4754c0bd8ed4a6e9b3eb  compare_last_days_c85f0a83edba6e130dc00d20fdf9504a_0040d906de7b77465eb3d96f1a8c23d0  compare_last_days_c85f0a83edba6e130dc00d20fdf9504a_15e84da8060e3347669c5d59e98c0dc4  compare_last_days_c85f0a83edba6e130dc00d20fdf9504a_227408caa28499dfbfa8b881e7d2a9b4  compare_last_days_c85f0a83edba6e130dc00d20fdf9504a_228feb0c2655479809069d965e129515  compare_last_days_c85f0a83edba6e130dc00d20fdf9504a_4382bcc20d454a2dc39555d710aeae34  compare_last_days_c85f0a83edba6e130dc00d20fdf9504a_696be05596e9f2c50364ef187e68ebd0  compare_last_days_c85f0a83edba6e130dc00d20fdf9504a_6fc9284e662810e41bfe9ae355b3e8a6  (+1109 more)
04_climate/: 04_01_climate_and_strom.html  04_02_trend_season_normalstrom.html  04_02_trend_season_waermestrom.html  04_03_outliers.html  04_05_outliers_multivariate.html  index.html
05_model_waermestrom/: 05_01_naive_model.html  05_02_baseline.html  05_04_random_forest.html  05_07_h2o.html  05_99_compare_models.html  index.html
Process/: 00_strom_data_src.html  01_strom_process.html  02_waermestrom_process.html  03_dwd_data.html
Setup/: 01_quarto.html  02_duckdb.html  03_load_data.html
data/: 2022-12-23-ecas-export.db  2022-12-24-ecas-export.db  (+91 more)
(+92 files in other folders)
