[project]
name = "strom"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Eduardo Alfonso-Sierra", email = "edalfon@gmail.com"},
]
dependencies = [
    "duckdb>=0.9.2",
    "pandas>=2.2.0",
    "jupysql>=0.10.7",
    "toml>=0.10.2",
    "duckdb-engine>=0.10.0",
    "plotly>=5.18.0",
    "matplotlib>=3.8.2",
    "folium>=0.15.1",
    "beautifulsoup4>=4.12.3",
    "pyarrow>=15.0.0",
    "seaborn>=0.13.1",
    "statsmodels>=0.14.1",
    "sweetviz>=2.3.1",
    "scikit-learn>=1.4.0",
    "yellowbrick>=1.5",
    "vetiver>=0.2.4",
    "scikit-lego>=0.7.0",
    "joypy>=0.2.6",
    "h2o>=3.44.0.3",
    "formulaic>=1.0.1",
    "metaflow>=2.11.0",
    "duckcli>=0.2.1",
    "epyfun @ file:///OneDrive/All/Python/epyfun",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
]
docs = [
    "sphinx-autoapi>=3.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-nb>=1.0.0",
]
dev = [
    "jupyter>=1.0.0",
]

