[project]
name = "strom"
version = "0.1.0"
description = "A package for doing great things!"
authors = [{ name = "Eduardo Alfonso-Sierra" }]
requires-python = "~=3.9"
readme = "README.md"
license = "MIT"
dependencies = [
    "pandas>=2.1.4,<3",
    "jupysql>=0.10.4,<0.11",
    "toml>=0.10.2,<0.11",
    "duckdb-engine>=0.9.4,<0.10",
    "plotly>=5.23.0,<6",
    "matplotlib>=3.8.2,<4",
    "folium>=0.15.1,<0.16",
    "beautifulsoup4>=4.12.2,<5",
    "pyarrow>=14.0.1,<15",
    "seaborn>=0.13.0,<0.14",
    "statsmodels>=0.14.1,<0.15",
    "sweetviz>=2.3.1,<3",
    "scikit-learn>=1.3.2,<2",
    "yellowbrick~=1.5",
    "vetiver>=0.2.3,<0.3",
    "scikit-lego>=0.7.0,<0.8",
    "joypy>=0.2.6,<0.3",
    "h2o>=3.44.0.3,<4",
    "formulaic>=1.0.1,<2",
    "itables>=1.6.3,<2",
    "prophet>=1.1.5,<2",
    "epyfun>=0.3.8,<0.4",
    "plotnine>=0.13.6,<0.14",
    "datashader>=0.16.3,<0.17",
    "unifiedbooster>=0.6.0,<0.7",
    "typing-extensions>=4.12.2,<5",
    "stepit>=0.3.1,<0.4",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3,<8",
    "pytest-cov>=4.1.0,<5",
    "jupyter>=1.0.0,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.jupysql.SqlMagic]
feedback = true
autopandas = true
displaycon = false
dsn_filename = "./connections.ini"

