[project]
name = "strom"
version = "0.1.0"
description = "A package for doing great things!"
authors = [{ name = "Eduardo Alfonso-Sierra" }]
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
dependencies = [
    "toml>=0.10.2",
    "folium>=0.15.1",
    "beautifulsoup4>=4.12.2",
    "pyarrow>=14.0.1",
    "seaborn>=0.13.0",
    "sweetviz>=2.3.1",
    "yellowbrick>=1.5",
    "vetiver>=0.2.3",
    "scikit-lego>=0.7.0",
    "joypy>=0.2.6",
    "formulaic>=1.0.1",
    "itables>=1.6.3",
    "prophet>=1.1.5",
    "epyfun>=0.3.8",
    "plotnine>=0.13.6",
    "datashader>=0.16.3",
    "unifiedbooster>=0.6.0",
    "typing-extensions>=4.12.2",
    "stepit>=0.3.1",
    "duckdb>=1.4.2",
    "duckdb-engine>=0.17.0",
    "pandas>=2.3.3",
    "plotly>=5.24.1",
    "h2o>=3.46.0.8",
    "statsmodels>=0.14.5",
    "jupysql>=0.11.1",
    "matplotlib>=3.9.4",
    "scikit-learn>=1.6.1",
    "quarto-cli>=1.8.26",
    "simplejson>=3.20.2",
    "ujson>=5.11.0",
    "orjson>=3.11.4",
    "json-tricks>=3.17.3",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.jupysql.SqlMagic]
feedback = true
autopandas = true
displaycon = false
dsn_filename = "./connections.ini"

